--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,18 @@ plugins {
 	id 'org.springframework.boot' version '2.3.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	//id 'checkstyle'
+}/*
+checkstyle {
+	toolVersion '7.8.1'
+	configFile file("google_checks.xml")
 }
+checkstyleMain {
+	source ='src/main/java'
+}
+checkstyleTest {
+	source ='src/test/java'
+}*/
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
