Dont allow linter to break build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
     - stage: build
       script:
       - ./gradlew build -x test
-      - ./java -jar checkstyle-8.37-all.jar -c /google_checks.xml src/main/java/com/example/demo/
+      - ./java -jar checkstyle-8.37-all.jar -c /google_checks.xml src/main/java/com/example/demo/ --exit-zero
     - stage: unit-tests
       script:
       - ./gradlew test --tests SimpleSavingsCalculatorTests --tests MortgageCalculatorTest --tests CreditCardMinimumPaymentCalculatorTests --tests CCPayoffTest
