--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - 8080
     ports:
       - "8080:8080"
+    links:
+      - database
     depends_on:
       - database
     networks:
