--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,40 @@
-#Specifies the language and version the project should be built with
 language: java
 jdk:
-  - openjdk8
-
-#Creates the build with multiple jobs specified by the "script", jobs are grouped by the "-stage"
-#identifier, multiple jobs may run in the same stage(In parallell)
+- openjdk8
 before_install:
-  - chmod +x gradlew
+- openssl aes-256-cbc -K $encrypted_4554e365dc6e_key -iv $encrypted_4554e365dc6e_iv
+  -in PP2-Group-9-9ebbe0ca35d8.json.enc -out PP2-Group-9-9ebbe0ca35d8.json -d
+- chmod +x gradlew
 
 jobs:
   include:
-    - stage: build
-      script:
-      - ./gradlew build -x test
-      #- ./google_checks.xml
-    - stage: unit-tests
-      script:
-      - ./gradlew test --tests SimpleSavingsCalculatorTests --tests MortgageCalculatorTest --tests CreditCardMinimumPaymentCalculatorTests --tests CCPayoffTest
-      -
-    - stage: integration-tests
-      script: ./gradlew test --tests BigBankApplicationTest
+  - stage: build
+    script:
+    - "./gradlew build -x test"
+  - stage: unit-tests
+    script:
+    - "./gradlew test --tests SimpleSavingsCalculatorTests --tests MortgageCalculatorTest
+      --tests CreditCardMinimumPaymentCalculatorTests --tests CCPayoffTest"
+    - 
+  - stage: integration-tests
+    script: "./gradlew test --tests BigBankApplicationTest"
 
-    - stage: deploy
-      script: ./deploy-script
+deploy:
+  provider: gae
+  keyfile: "PP2-Group-9-9ebbe0ca35d8.json.enc"
+  project: "pp2-group-9"
+  on:
+    - master
+    - emg-skip-int
+    - emg-skip-unit
+    - emg-skip-all
 
-#Specifies the order of the stages and chooses which branches run the stages
+
 stages:
-  - name: build
-    if: branch = master OR branch = emg-skip-all OR branch = emg-skip-unit OR branch = emg-skip-int OR branch = build
-  - name: unit-tests
-    if: branch = master OR branch = emg-skip-int
-  - name: integration-tests
-    if: branch = master OR branch = emg-skip-unit
-  - name: deploy
-    if: branch = master OR branch = emg-skip-all OR branch = emg-skip-unit OR branch = emg-skip-int
+- name: build
+  if: branch = master OR branch = emg-skip-all OR branch = emg-skip-unit OR branch
+    = emg-skip-int OR branch = build
+- name: unit-tests
+  if: branch = master OR branch = emg-skip-int
+- name: integration-tests
+  if: branch = master OR branch = emg-skip-unit
