--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,13 @@ jobs:
 
 deploy:
   provider: gae
-  keyfile: "project.json.enc"
+  keyfile: "PP2-Group-9-9ebbe0ca35d8.json.enc"
+  project: "pp2-group-9"
   on:
     - master
     - emg-skip-int
     - emg-skip-unit
     - emg-skip-all
-  edge: true
 
 stages:
   - name: build
