--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
 language: java
+
 jdk:
-- openjdk8
+  - openjdk8
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_4554e365dc6e_key -iv $encrypted_4554e365dc6e_iv
     -in PP2-Group-9-9ebbe0ca35d8.json.enc -out PP2-Group-9-9ebbe0ca35d8.json -d
   - chmod +x gradlew
+
 jobs:
   include:
-  - stage: build
-    script:
-    - "./gradlew build -x test"
-    - java -jar checkstyle-8.37-all.jar -c Big_Bank.xml src/main/java/com/example/demo/
-  - stage: unit-tests
-    script:
-    - "./gradlew test --tests SimpleSavingsCalculatorTests --tests MortgageCalculatorTest
+    - stage: build
+      script:
+        - "./gradlew build -x test"
+        #- java -jar checkstyle-8.37-all.jar -c Big_Bank.xml src/main/java/com/example/demo/
+    - stage: unit-tests
+      script:
+        - "./gradlew test --tests SimpleSavingsCalculatorTests --tests MortgageCalculatorTest
       --tests CreditCardMinimumPaymentCalculatorTests --tests CCPayoffTest"
-  - stage: integration-tests
-    script: "./gradlew test --tests BigBankApplicationTest"
+    - stage: integration-tests
+      script: "./gradlew test --tests BigBankApplicationTest"
 
 deploy:
   provider: gae
@@ -28,6 +31,7 @@ deploy:
     - emg-skip-unit
     - emg-skip-all
 
+
 stages:
   - name: build
     if: branch = master OR branch = emg-skip-all OR branch = emg-skip-unit OR branch
@@ -36,5 +40,8 @@ stages:
     if: branch = master OR branch = emg-skip-int
   - name: integration-tests
     if: branch = master OR branch = emg-skip-unit
+
+
+
 notifications:
   slack: drbyron:gIk54cynDV81nZgojHV3Hgsq
