--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	compile 'org.mongodb:mongodb-driver-sync:4.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.json:json:20200518'
+	implementation 'io.fusionauth:fusionauth-jwt:4.0.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
