--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,14 @@ repositories {
 dependencies {
 	compile 'org.mongodb:mongodb-driver-sync:4.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	implementation 'org.json:json:20200518'
 	implementation 'io.fusionauth:fusionauth-jwt:4.0.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
 }
 
 test {
